2008-04-07  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/CMakeLists.txt,
	libavogadro/src/engines/CMakeLists.txt, libavogadro/src/glwidget.cpp:
	Statically linked the ball and stick engine to libavogadro. This
	guarantees the minimal ability to display a molecule.

2008-04-06  Marcus D. Hanwell  <marcus@cryos.org>

	* CMakeLists.txt: Added the pedantic compiler flag to spot many issues
	with C++ code such as those picked up by KDE developers. Also
	introduce symbol hiding if a recent GCC is installed. We now need to
	explicitly export all symbols on Linux/Apple systems.

	* cmake/modules/FindBoostPython.cmake,
	cmake/modules/MacroEnsureVersion.cmake: Extra cmake modules from KDE
	4.1 (trunk) to improve Boost Python detection and check versions.

	* libavogadro/src/CMakeLists.txt,
	libavogadro/src/extensions/CMakeLists.txt: Improve the Boost Python
	detection and link to the dynamic Python library.

	* avogadro/src/application.h, avogadro/src/enginelistview.h,
	avogadro/src/engineprimitiveswidget.h,
	avogadro/src/enginesetupwidget.h, avogadro/src/mainwindow.h,
	libavogadro/src/engines/orbitalengine.h,
	libavogadro/src/engines/surfaceengine.h, libavogadro/src/extension.h,
	libavogadro/src/extensions/forcefieldextension.h,
	libavogadro/src/extensions/gamessefpmatchdialog.h,
	libavogadro/src/extensions/gamessextension.cpp,
	libavogadro/src/extensions/gamessextension.h,
	libavogadro/src/extensions/gamessinputdata.cpp,
	libavogadro/src/extensions/gamessinputdata.h,
	libavogadro/src/extensions/h2methylextension.h,
	libavogadro/src/extensions/hydrogensextension.h,
	libavogadro/src/extensions/propextension.h,
	libavogadro/src/extensions/pythonextension.cpp,
	libavogadro/src/extensions/pythonextension.h,
	libavogadro/src/extensions/selectextension.h,
	libavogadro/src/extensions/unitcellextension.h,
	libavogadro/src/tools/autoopttool.h: Fixed errors pointed out by the
	pedantic compiler flag - mainly extra ;s and ,s.
