@@ -1,5 +1,8 @@
 2008-04-07  Marcus D. Hanwell  <marcus@cryos.org>
 
+	* avogadro/src/mainwindow.cpp: Added a warning dialog when no engines
+	and/or tools were loaded.
+
 	* libavogadro/src/CMakeLists.txt,
 	libavogadro/src/engines/CMakeLists.txt, libavogadro/src/glwidget.cpp:
 	Statically linked the ball and stick engine to libavogadro. This
